add core structure for home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Helo World!</h1>
+    <header>Header content </header>
+    <section>
+        Main image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running locations, distance and times
+    </section>
+    <Footer>
+        social link here
+    </Footer>
 </body>
 </html>
