--- a/index.html
+++ b/index.html
@@ -32,18 +32,23 @@
         </nav>
     </header>
     <section id="hero-outer">
-        <div id="hero-image">
-
+        <div id="hero-image"></div>
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & Phoenix Park</h3>
         </div>
     </section>
-    <section>
-        Club Ethos
+    <section id="club-ethos">
+        <h1>Why Love Running With Us?</h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
     </section>
     <section>
         Running locations, distance and times
     </section>
     <Footer>
-        social link heregi
+        social link
     </Footer>
 </body>
 
