Add background image to times section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="right-about">Right</div>
         <div id="center-about">Center</div>
     </section>
-    <section>
+    <section id="times">
 
          <div>
             <h2>Urban</h2>
